fix the dark mode

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 /* header */
 .title {
-  color: #f0f0f0;
+  color: var(--main-color);
   text-align: center;
   margin-bottom: 20px;
   font-size: 2.5rem;
@@ -44,11 +44,14 @@ body {
 }
 
 .board-header {
-  color: #f0f0f0;
+  color: var(--main-color);
   display: flex;
   justify-content: space-around;
   font-size: 1.4rem;
   margin-bottom: 30px;
+}
+.turn {
+  color: var(--secondary-color);
 }
 
 .reset {
@@ -90,7 +93,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  color: #f0f0f0;
+  color: var(--main-color);
 }
 
 .prev {
@@ -209,4 +212,7 @@ footer {
 .dark {
   background-color: #292c35;
   color: var(--secondary-color);
+}
+.dark2 {
+  color: var(--light-color-bgc);
 }
